styles.css
@font-face {
  font-family: New Grotesk Mono;
  font-weight: 500;
  font-display: block;
  src: url(./fonts/NewGrotesk-MediumMono.otf);
}

* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #082675;
  font-display: block;
  font-family: 'New Grotesk Mono', sans-serif;
  line-height: 1.6;
}

body {
  margin: 0 auto;
  padding: 24px;
  background: #FFF9F5;
  height: calc(100vh - 48px);
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

h1 {
  font-weight: 500;
  font-size: 25vw;
  line-height: 25vw;
  opacity: 0.08;
}

p, a{
  font-weight: 500;
  text-transform: uppercase;
  text-decoration: none;
}

nav {
  display: flex;
  justify-content: space-between;
  position: relative;
  flex-wrap: wrap;
}

nav p, a {
  font-size: clamp(14px, 1.4vw, 1.4vw);
  text-align: center;
  z-index: 100;
}

footer p {
  font-size: clamp(12px, 1vw, 1vw);
}

.invite-code {
  display: flex;
  flex-direction: column;
  align-items: center;
}


/* MEDIA QUERIES */

@media only screen and (max-width: 720px) {

  body {
    padding: 16px;
  }

  nav p, a {
    width: 100%;
  }

  footer p {
    text-align: center;
  }

}

